--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,15 +10,15 @@ pool:
   vmImage: 'ubuntu-latest' # examples of other options: 'macOS-10.15', 'vs2017-win2016'
 
 steps:
-- task: NodeTool@0
+- task: NodeTool@0 
   inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+    versionSpec: '12.x' # replace this value with the version that you need for your project
 
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
+
 
 - script: mocha test --reporter mocha-junit-reporter
 
@@ -33,3 +33,13 @@ steps:
     codeCoverageTool: Cobertura # or JaCoCo
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*coverage.xml'
     reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'
+
+- script: npm run build
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)'
+- script: npm publish
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
